--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@meforma/vue-toaster": "^1.3.0",
         "kutty": "^0.6.0",
         "mitt": "^3.0.0",
-        "moment": "^2.29.1"
+        "moment": "^2.29.1",
+        "vue-multiselect": "^3.0.0-alpha.2"
     }
 }
