--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=c2d3a9a432e7ffa920de",
+    "/css/app.css": "/css/app.css?id=b51f31736343d81cdd4a"
 }
